[gd_scene load_steps=16 format=3 uid="uid://dfu85v4eflk6q"]

[ext_resource type="Script" path="res://Scenes/GeoffScenes/main_menu.gd" id="1_3hnnt"]
[ext_resource type="FontFile" uid="uid://y5ckdq3gkoyw" path="res://Assets/ascii-sector-16x16-tileset.ttf" id="1_t38q1"]
[ext_resource type="Texture2D" uid="uid://6wcsr1h8xfw0" path="res://Assets/JeremyAssets/necromancer.png" id="3_khd7a"]
[ext_resource type="Texture2D" uid="uid://crmvn1iqsyr1l" path="res://Assets/GeoffAssets/grass_tile_1.png" id="4_yedyq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_alk2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cyqu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57xtp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oj2cl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7l1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p46l8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k8wm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1l1jd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1mok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n7mcy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6654"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3hnnt")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yedyq")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="StartingMenu" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/StartingMenu"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/StartingMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.979736, 0.701778, 0, 1)
theme_override_colors/font_hover_color = Color(0.79896, 0.606518, 0.236812, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.701961, 0, 1)
theme_override_colors/font_focus_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_color = Color(0.836012, 0.752559, 0.527808, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_alk2x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5cyqu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_57xtp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_oj2cl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_h7l1d")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p46l8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k8wm6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1l1jd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r1mok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n7mcy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6654")
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/StartingMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.979736, 0.701778, 0, 1)
theme_override_colors/font_hover_color = Color(0.79896, 0.606518, 0.236812, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.701961, 0, 1)
theme_override_colors/font_focus_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_color = Color(0.836012, 0.752559, 0.527808, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_alk2x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5cyqu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_57xtp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_oj2cl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_h7l1d")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p46l8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k8wm6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1l1jd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r1mok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n7mcy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6654")
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/StartingMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.979736, 0.701778, 0, 1)
theme_override_colors/font_hover_color = Color(0.79896, 0.606518, 0.236812, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.701961, 0, 1)
theme_override_colors/font_focus_color = Color(0.835294, 0.752941, 0.529412, 1)
theme_override_colors/font_color = Color(0.836012, 0.752559, 0.527808, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_alk2x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5cyqu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_57xtp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_oj2cl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_h7l1d")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p46l8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k8wm6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1l1jd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r1mok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n7mcy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6654")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StartingMenu"]
layout_mode = 2
texture = ExtResource("3_khd7a")
expand_mode = 3

[node name="PlayerCountSelect" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PlayerCountSelect"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "Select Players"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/PlayerCountSelect"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PlayerCountSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="1PButton" type="Button" parent="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "1
"

[node name="3PButton" type="Button" parent="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "3"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PlayerCountSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="2PButton" type="Button" parent="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "2"

[node name="4PButton" type="Button" parent="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "4"

[node name="CharacterSelect" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PlayerSelecting" type="Label" parent="MarginContainer/CharacterSelect"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 72
text = "Player 1 Select"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/CharacterSelect"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CharacterSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tradie" type="Button" parent="MarginContainer/CharacterSelect/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
text = "Tradie"
icon = ExtResource("3_khd7a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Abo" type="Button" parent="MarginContainer/CharacterSelect/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
text = "Aboriginal"
icon = ExtResource("3_khd7a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/CharacterSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Raygun" type="Button" parent="MarginContainer/CharacterSelect/Buttons/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
text = "Raygun"
icon = ExtResource("3_khd7a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Ranger" type="Button" parent="MarginContainer/CharacterSelect/Buttons/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_t38q1")
theme_override_font_sizes/font_size = 48
text = "Bushranger"
icon = ExtResource("3_khd7a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[connection signal="pressed" from="MarginContainer/StartingMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/StartingMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/StartingMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer/1PButton" to="." method="_on_1p_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer/3PButton" to="." method="_on_3p_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer2/2PButton" to="." method="_on_2p_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerCountSelect/Buttons/VBoxContainer2/4PButton" to="." method="_on_4p_button_pressed"]
[connection signal="pressed" from="MarginContainer/CharacterSelect/Buttons/VBoxContainer/Tradie" to="." method="_on_tradie_pressed"]
[connection signal="pressed" from="MarginContainer/CharacterSelect/Buttons/VBoxContainer/Abo" to="." method="_on_abo_pressed"]
[connection signal="pressed" from="MarginContainer/CharacterSelect/Buttons/VBoxContainer3/Raygun" to="." method="_on_raygun_pressed"]
[connection signal="pressed" from="MarginContainer/CharacterSelect/Buttons/VBoxContainer3/Ranger" to="." method="_on_ranger_pressed"]
